# ai-web-game

./: README.md
.github/workflows/: deploy.yml  lint.yml
docs/: design-doc.md
webgame/: Cargo.toml
webgame-game/: ASSET_LICENSES.md  Cargo.toml  index.html
webgame-game/assets/: key.glb  model.safetensors  p_net.safetensors
webgame-game/assets/characters/: cyborgFemaleA.glb  skaterMaleA.glb
webgame-game/assets/furniture/: doorway.glb  floorFull.glb  wallDoorway.glb
webgame-game/assets/levels/: 1.json  2.json  test.json
webgame-game/src/: agents.rs  cartpole.rs  configs.rs  filter.rs  gridworld.rs  lib.rs  main.rs  models.rs  net.rs  observations.rs  observer.rs  screens.rs  world_objs.rs
webgame-game/src/ui/: input_prompt.rs  menu_button.rs  mod.rs  screen_transition.rs
webgame-ml/: .gitignore  README.md  pyproject.toml  record_runs.sh
webgame-ml/webgame/: bench_filters.py  bench_policies.py  common.py  envs.py  filter.py  gen_trajectories.py  models.py  train_agents.py  train_filter.py
webgame-ml/webgame/algorithms/: parallel_vec_wrapper.py  ppo.py  rollout_buffer.py
webgame-ml/webgame/experiments/: test_rust.py
webgame-ml/webgame_rust/: Cargo.toml  pyproject.toml  webgame_rust.pyi
webgame-ml/webgame_rust/src/: lib.rs
