[package]
name = "webgame-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3


[dependencies]
bevy = { version = "0.12.1", features = ["wayland"] }
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.4.0" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.4.0" }
rand = "0.8.5"
safetensors = "0.4.2"
serde = { version = "1.0.0", features = ["derive"] }
thiserror = "1.0.56"
